# dpm-core

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: logging.conf  modules.conf  security.conf  system.conf
dpmdk/: README.md
dpmdk/include/: CommonModuleAPI.hpp  ModuleOperations.hpp  StandaloneModuleImpl.hpp
dpmdk/src/: CommonModuleAPI.cpp  ModuleOperations.cpp
include/: ConfigManager.hpp  DPMDefaults.hpp  Logger.hpp  LoggingLevels.hpp  ModuleLoader.hpp  dpm_interface.hpp  dpm_interface_helpers.hpp  error.hpp  handlers.hpp  module_interface.hpp
modules/: info.cpp
modules/info/: CMakeLists.txt  README.md  info.cpp
modules/info/dpmdk/include/: CommonModuleAPI.hpp
modules/info/dpmdk/src/: CommonModuleAPI.cpp
modules/info/include/: infoFuncs.hpp
modules/info/src/: infoFuncs.cpp
modules/verify/: CMakeLists.txt  verify.cpp
modules/verify/include/: checksum.hpp  checksum_memory.hpp  cli_parsers.hpp  commands.hpp  package_operations.hpp  verification.hpp  verify_commands.hpp
modules/verify/src/: checksum.cpp  checksum_memory.cpp  cli_parsers.cpp  commands.cpp  package_operations.cpp  verification.cpp  verify_commands.cpp
src/: ConfigManager.cpp  Logger.cpp  ModuleLoader.cpp  dpm.cpp  dpm_interface.cpp  dpm_interface_helpers.cpp  error.cpp  handlers.cpp  module_interface.cpp
